# meta-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: config.h.in  header_file.json.in
engine/: CMakeLists.txt  engine.cc  engine.h  main.cc
engine/core/: context.cc  math.cc  math.h  time.cc  time.h
engine/core/context/: context.cc  context.h
engine/core/json/: json.h
engine/core/math/: axis_aligned.cc  axis_aligned.h  math.cc  math.h  math_headers.h  matrix3.cc  matrix3.h  matrix4.cc  matrix4.h  quaternion.cc  quaternion.h  random.h  transform.h  vector2.cc  vector2.h  vector3.cc  vector3.h  vector4.cc  vector4.h
engine/core/meta/parser/: CMakeLists.txt
engine/core/meta/parser/parser/: main.cc  main.cpp
engine/core/meta/parser/parser/common/: precompiled.h  schema_module.h
engine/core/meta/parser/parser/cursor/: cursor.cc  cursor.h  cursor_type.cc  cursor_type.h
engine/core/meta/parser/parser/generator/: generator.cc  generator.h  reflection_generator.cc  reflection_generator.cpp  reflection_generator.h  serializer_generator.cc  serializer_generator.cpp  serializer_generator.h
engine/core/meta/parser/parser/language_types/: class.cc  class.cpp  class.h  field.cc  field.cpp  field.h  method.cc  method.h  type_info.cc  type_info.h
engine/core/meta/parser/parser/meta/: meta_info.cc  meta_utils.cc  meta_utils.h
engine/core/meta/parser/parser/parser/: parser.cc  parser.cpp  parser.h
engine/core/meta/parser/parser/template_manager/: template_manager.cc  template_manager.cpp  template_manager.h
engine/core/meta/parser/template/: all_reflection_file.mustache  all_serializer.h.mustache  all_serializer.ipp.mustache  common_reflection_file.mustache  common_serializer_file.mustache
engine/core/meta/reflection/: reflection.cc  reflection.h  reflection_register.cc  reflection_register.h
engine/core/meta/serializer/: serializer.cc  serializer.h
engine/core/meta/template/: allReflectionFile.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
engine/core/util/: log.h  time.cc  time.h
engine/editor/: editor.cc  editor.h
engine/function/framework/common/: object.cc  object.h  object_id_allocator.cc  object_id_allocator.h  world.cc  world.h
engine/function/framework/component/: component.cc  component.h
engine/function/input/: input.cc  input.h
engine/function/rendering/: rendering.cc  rendering.h  rendering_old.cpp  rendering_old.h  vulkan_rhi.cc  vulkan_rhi.h  vulkan_util.cc  vulkan_util.h
engine/function/window/: window.cc  window.h
engine/function/world/: world.cc  world.h
engine/include/luka/: engine.h
engine/include/luka/core/: context.h  core.h  file.h  log.h  math.h  time.h
engine/include/luka/editor/: editor.h
engine/include/luka/function/: function.h  rendering.h
engine/include/luka/function/context/: context.h
engine/include/luka/function/input/: input.h
engine/include/luka/function/rendering/: rendering.h  rendering_old.h  vulkan_rhi.h
engine/include/luka/function/window/: input.h  window.h
engine/include/luka/function/world/: world.h
engine/include/luka/platform/: platform.h
engine/include/luka/resource/: gltf_model.h  obj_model.h  resource.h  resource_path.h
engine/include/luka/resource/asset/: asset.h
engine/include/luka/resource/config/: config.h
engine/resource/asset/: asset.cc  asset.h
engine/resource/config/: config.cc  config.h  source_path.h.in
engine/resource/res_type/common/: level.cc  level.h  object.cc  object.h  world.cc  world.h
engine/src/: engine.cc  main.cc
engine/src/core/: context.cc  core.cc  file.cc  math.cc  time.cc
engine/src/editor/: editor.cc
engine/src/function/: function.cc  rendering.cc  window.cc
engine/src/function/context/: context.cc
engine/src/function/input/: input.cc
engine/src/function/rendering/: rendering.cc  vulkan_rhi.cc  vulkan_util.cc
engine/src/function/window/: input.cc  window.cc
engine/src/function/world/: world.cc
engine/src/platform/: platform.cc
engine/src/resource/: gltf_model.cc  image.cc  obj_model.cc  resource.cc  resource_path.cc
engine/src/resource/asset/: asset.cc
engine/src/resource/config/: config.cc
resource/asset/global/: particle.global.json
resource/asset/objects/character/player/components/animation/data/: W2_CrouchWalk_Aim_F_Loop_IP.animation_clip.json
resource/config/: config.ini
resource/shader/: CMakeLists.txt
resource/shaders/: CMakeLists.txt
